--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackerstories-test",
+  "name": "rwpa-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,10 +18,6 @@
     "cypress": "^12.3.0"
   },
   "devDependencies": {
-    "eslint": "^8.31.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-promise": "^6.1.1"
+ 
   }
 }
